--- a/cssFiles/support.css
+++ b/cssFiles/support.css
@@ -2,7 +2,7 @@ body
 {
     margin: 0px;
     padding: 0px;
-    background-color: #213445;
+    background-color: #0f1a24;
     height: max;
     width: max;
     font-family: 'Red Hat Text', sans-serif;
@@ -10,7 +10,7 @@ body
 
 main
 {
-    background-color: #384960;
+    background-color: #1a2533;
     margin-left: auto;
     margin-right: auto;
     padding: 1em;
@@ -33,6 +33,7 @@ main
     opacity: 1;
 }
 
+
 object.logo
 {
     margin-top: 30px;
@@ -45,4 +46,25 @@ object.logo
 {
     text-align: justify;
     font-size: 16px;
+}
+
+.bg-baner
+{
+    background-color: #0a2640;
+}
+
+.bg-navbar
+{
+    background-color: #b1882e;
+}
+
+.text-h2
+{
+    color: #b1882e;
+}
+
+.h2
+{
+    padding: 0;
+    margin: 0;
 }
